# spacies-io

./: .gitignore  Cargo.toml  LICENSE.md  README.md
crates/mygame-assets/: Cargo.toml
crates/mygame-assets/assets/scenes/: Cylinder.glb  TestEnvironment.glb  craft_speederB.glb  craft_speederC.glb  target-large.glb  weapon-ammo-arrow-rotated.glb  weapon-ammo-arrow-scaled.glb  weapon-ammo-arrow.glb
crates/mygame-assets/assets/shaders/: checker.wgsl  crosshair.wgsl  gradient.wgsl  skybox.wgsl
crates/mygame-assets/src/: assets.rs  effects.rs  images.rs  lib.rs  materials.rs  meshes.rs
crates/mygame-client/src/: app.rs  crosshair.rs  game_state.rs  host.rs  input.rs  interpolation.rs  lib.rs  network.rs  replication.rs  throwaway.rs
crates/mygame-client/src/ui/: mod.rs  respawn_menu.rs  system_menu.rs
crates/mygame-common/: Cargo.toml
crates/mygame-common/src/: lib.rs  player.rs  ship.rs
crates/mygame-launcher/options/: client_options.ron  server_options.ron  web_client_options.ron
crates/mygame-protocol/src/: component.rs  input.rs  message.rs
crates/mygame-render/: Cargo.toml
crates/mygame-render/src/: camera.rs  effects.rs  lib.rs  materials.rs
crates/mygame-server/: Cargo.toml
crates/mygame-server/src/: app.rs  bots.rs  lib.rs  network.rs  replication.rs
deployment/client/options/: client_options.ron  web_client_options.ron
deployment/server/options/: server_options.ron
