[workspace]
members = [
  "crates/mygame-client",
  "crates/mygame-server",
  "crates/mygame-common",
  "crates/mygame-protocol",
  "crates/mygame-launcher",
  "crates/mygame-render",
  "crates/mygame-assets"
]
resolver = "2"

[workspace.dependencies]
bevy = {version = "0.16", features = [
  "serialize",
  "bevy_asset",
  "bevy_state",
  "bevy_pbr",
  "bevy_ui",
  "bevy_ui_picking_backend",
  "default_font",
  "tonemapping_luts",
  "animation",
  "bevy_animation",
  "bevy_gltf",
  "png",
  "bevy_window",
  "bevy_winit",
  "webgpu", # TODO: Disable this when not on WASM
  "x11",
  "track_location"
], default-features = false}

bevy_rand = {version = "0.11", features = ["wyrand"]}
rand_core = "0.9"
bevy-inspector-egui = "0.31"
bevy_egui = { version = "0.34", default-features = false, features = [
  "open_url",
  "default_fonts",
  "render",
] }

bincode = "1.3.3"
serde = "1.0.217"
crossbeam-channel = "0.5.14"
getrandom = {version = "0.3", features = ["wasm_js"]}

# lightyear = {git = "https://github.com/cBournhonesque/lightyear", branch = "main", features = [
#   "leafwing",
#   "avian3d",
#   "websocket",
#   "webtransport"
# ]}

lightyear = { version = "0.20.2", features = [
  "leafwing",
  "avian3d",
  "websocket",
  "webtransport",
  "udp"
]}

avian3d = {version = "0.3.0", features = [
  "3d",
  "f32",
  "parry-f32",
  "parallel",
  "serialize",
  "enhanced-determinism",
  "collider-from-mesh",
  "debug-plugin"
], default-features = false}

leafwing-input-manager = {version = "0.17", default-features = false, features = [
  "keyboard",
  "gamepad",
  "mouse",
]}

seahash = "4.1.0"

#bevy_hanabi = { version = "0.15", default-features = false, features = ["3d"] }
bevy_hanabi = { git = "https://github.com/djeedai/bevy_hanabi", branch = "main", default-features = false, features = ["3d"]}


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[workspace.lints.rust]
dead_code = "allow"
unused_variables = "allow"
unused_imports = "allow"

[workspace.lints.clippy]
type_complexity = "allow"
