[package]
name = "mygame-render"
version = "0.1.0"
edition = "2024"

[dependencies]
mygame-protocol = { path = "../mygame-protocol" }
mygame-assets = { path = "../mygame-assets" }
mygame-common = { path = "../mygame-common" }
lightyear.workspace = true
avian3d.workspace = true
bevy.workspace = true
serde.workspace = true
leafwing-input-manager.workspace = true
bevy-inspector-egui.workspace = true
bevy_hanabi.workspace = true

[lints]
workspace = true
